# olympics-ranking-medals

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  Makefile  README.md  pyproject.toml  requirements.txt
src/: about.md  main.py
tests/: conftest.py
